k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "monitoring-cert"
spec:
  rules:
    - host: zabbix.exemplo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-frontend
                port:
                  number: 80
    - host: grafana.exemplo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - zabbix.exemplo.com
        - grafana.exemplo.com
      secretName: monitoring-tls
